add links to lego repo, talk slides

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
 <h3>Background basics</h3>
 <ul>
 <li><a href="bk00_vectors-and-lists.html">Vectors and lists</a> <em>review of vectors, lists, and indexing</em></li>
-<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a> <em>for the skeptics</em></li>
+<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a> <em>side-by-side workflow comparison</em></li>
 </ul>
 </div>
 <div id="core-purrr-lessons" class="section level3">
