--- a/more-resources.html
+++ b/more-resources.html
@@ -217,6 +217,10 @@ $(document).ready(function () {
 <ul>
 <li><a href="https://github.com/jennybc/repurrrsive#readme">https://github.com/jennybc/repurrrsive</a></li>
 </ul></li>
+<li>Depicting R data structures and operations via lego:
+<ul>
+<li><a href="https://github.com/jennybc/lego-rstats#readme">https://github.com/jennybc/lego-rstats</a></li>
+</ul></li>
 </ul>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
