--- a/slides.html
+++ b/slides.html
@@ -203,8 +203,12 @@ $(document).ready(function () {
 </div>
 
 
-<p><em>These are not slides from a talk!</em></p>
-<p>Selected slides I’ve shown before and during live-coding in class.</p>
+<p>Slides from a related talk:</p>
+<script async class="speakerdeck-embed" data-id="907f3dc0cdb5496c8d35efca70e5f6bd" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<div style="margin-bottom:5px">
+<strong> <a href="https://speakerdeck.com/jennybc/data-rectangling" title="Data rectangling" target="_blank">Data rectangling</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+</div>
+<p>Selected slides I’ve shown before and during live-coding in class:</p>
 <script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
