Main part of the NY food market data extraction

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ $(document).ready(function () {
 <li><a href="ls01_map-name-position-shortcuts.html">Introduction to <code>map()</code>: extract elements</a> <em>name and position shortcuts, type-specific and simplifying map</em></li>
 <li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
 <li><a href="ls03_map-function-syntax.html">Specifying the function in map() + parallel mapping</a> <em>all the purrr shortcuts and mapping over multiple lists</em></li>
-<li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for a live-coding</em></li>
+<li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for live-coding</em></li>
 <li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a><br />
 </li>
 <li><a href="ls20_nested-data-frame.html">Nested data frames</a></li>
@@ -231,7 +231,9 @@ $(document).ready(function () {
 </li>
 <li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
 </li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a></li>
+<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a><br />
+</li>
+<li><a href="ex26_ny-food-market-json.html">Food Markets in New York</a> <em>from JSON to data frame</em></li>
 </ul>
 </div>
 <div id="patterns-and-anti-patterns" class="section level3">
