--- a/ls02_map-extraction-advanced.html
+++ b/ls02_map-extraction-advanced.html
@@ -25,7 +25,7 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
-<script src="site_libs/htmlwidgets-0.7/htmlwidgets.js"></script>
+<script src="site_libs/htmlwidgets-0.8/htmlwidgets.js"></script>
 <link href="site_libs/jsoneditor-5.5.5/jsoneditor.min.css" rel="stylesheet" />
 <script src="site_libs/jsoneditor-5.5.5/jsoneditor.min.js"></script>
 <script src="site_libs/jsonedit-binding-1.4.0/jsonedit.js"></script>
@@ -241,8 +241,9 @@ div.tocify {
 }
 
 .tocify-subheader .tocify-item {
-  font-size: 0.9em;
-  padding-left: 5px;
+  font-size: 0.90em;
+  padding-left: 25px;
+  text-indent: 0;
 }
 
 .tocify .list-group-item {
