--- a/ls00_inspect-explore.html
+++ b/ls00_inspect-explore.html
@@ -284,7 +284,7 @@ div.tocify {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="slides.html">Slides</a>
+  <a href="talks.html">Talks</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
