--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="slides.html">Slides</a>
+  <a href="talks.html">Talks</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -216,26 +216,29 @@ $(document).ready(function () {
 <pre class="r"><code>devtools::session_info(c(&quot;purrr&quot;, &quot;repurrrsive&quot;))</code></pre>
 <pre><code>## Session info -------------------------------------------------------------</code></pre>
 <pre><code>##  setting  value                       
-##  version  R version 3.3.1 (2016-06-21)
+##  version  R version 3.3.2 (2016-10-31)
 ##  system   x86_64, darwin13.4.0        
 ##  ui       X11                         
 ##  language (EN)                        
 ##  collate  en_CA.UTF-8                 
-##  tz       America/Vancouver           
-##  date     2016-12-03</code></pre>
+##  tz       America/New_York            
+##  date     2017-01-12</code></pre>
 <pre><code>## Packages -----------------------------------------------------------------</code></pre>
 <pre><code>##  package     * version    date       source                          
 ##  assertthat    0.1        2013-12-06 CRAN (R 3.2.0)                  
-##  BH            1.60.0-2   2016-05-07 CRAN (R 3.2.5)                  
+##  BH            1.62.0-1   2016-11-19 cran (@1.62.0-)                 
+##  bindr         0.1        2016-11-13 cran (@0.1)                     
+##  bindrcpp      0.1        2016-12-11 cran (@0.1)                     
 ##  DBI           0.5-1      2016-09-10 CRAN (R 3.3.0)                  
-##  dplyr         0.5.0      2016-06-24 CRAN (R 3.3.0)                  
+##  dplyr         0.5.0.9000 2017-01-02 Github (hadley/dplyr@c133557)   
 ##  lazyeval      0.2.0.9000 2016-10-24 Github (hadley/lazyeval@c155c3d)
 ##  magrittr      1.5        2014-11-22 CRAN (R 3.2.0)                  
-##  purrr         0.2.2.9000 2016-10-24 Github (hadley/purrr@8c72c35)   
+##  plogr         0.1-1      2016-09-24 cran (@0.1-1)                   
+##  purrr         0.2.2.9000 2017-01-02 Github (hadley/purrr@5360143)   
 ##  R6            2.2.0      2016-10-05 CRAN (R 3.3.0)                  
-##  Rcpp          0.12.7     2016-09-05 cran (@0.12.7)                  
+##  Rcpp          0.12.8.3   2017-01-06 Github (RcppCore/Rcpp@a53c4c5)  
 ##  repurrrsive   0.0.0.9000 2016-11-03 local                           
-##  tibble        1.2        2016-08-26 cran (@1.2)</code></pre>
+##  tibble        1.2-14     2017-01-06 local</code></pre>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
