--- a/pt00_gotchas.html
+++ b/pt00_gotchas.html
@@ -182,7 +182,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="slides.html">Slides</a>
+  <a href="talks.html">Talks</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
