--- a/talks.html
+++ b/talks.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Slides</title>
+<title>Talks</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -182,7 +182,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="slides.html">Slides</a>
+  <a href="talks.html">Talks</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -198,20 +198,32 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Slides</h1>
+<h1 class="title toc-ignore">Talks</h1>
 
 </div>
 
 
-<p>Slides from a related talk:</p>
+<p>Talks related to purrr.</p>
+<div id="rstudioconf-2017" class="section level3">
+<h3>rstudio::conf 2017</h3>
+<p>Slides <em>not posted yet</em></p>
+<p>Scripts <em>not posted yet</em></p>
+</div>
+<div id="data-rectangling" class="section level3">
+<h3>Data Rectangling</h3>
+<p>Various versions given at EARL Boston 2015, Plotcon NY 2016, Johns Hopkins Biostat Seminar</p>
 <script async class="speakerdeck-embed" data-id="907f3dc0cdb5496c8d35efca70e5f6bd" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jennybc/data-rectangling" title="Data rectangling" target="_blank">Data rectangling</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
 </div>
+</div>
+<div id="summerfall-teaching" class="section level3">
+<h3>2016 summer/fall teaching</h3>
 <p>Selected slides I’ve shown before and during live-coding in class:</p>
 <script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+</div>
 </div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
