Add rstudio::conf example scripts

--- a/about.html
+++ b/about.html
@@ -205,7 +205,13 @@ $(document).ready(function () {
 
 <p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>. The source can be found <a href="https://github.com/jennybc/purrr-tutorial">on GitHub</a> and its home on the web is here:</p>
 <p><a href="https://jennybc.github.io/purrr-tutorial" class="uri">https://jennybc.github.io/purrr-tutorial</a></p>
-<p>Materials created to support:</p>
+<p>Who am I?</p>
+<ul>
+<li>Jenny Bryan</li>
+<li><a href="https://github.com/jennybc/" class="uri">https://github.com/jennybc/</a></li>
+<li><a href="https://twitter.com/JennyBryan" class="uri">https://twitter.com/JennyBryan</a></li>
+</ul>
+<p>Materials initially created to support:</p>
 <ul>
 <li><a href="https://github.com/minisciencegirl/studyGroup/issues/131">2016-08-12 meeting</a> of the Vancouver R Study Group.<br />
 </li>
