--- a/talks.html
+++ b/talks.html
@@ -207,7 +207,13 @@ $(document).ready(function () {
 <div id="rstudioconf-2017" class="section level3">
 <h3>rstudio::conf 2017</h3>
 <p>Slides <em>not posted yet</em></p>
-<p>Scripts <em>not posted yet</em></p>
+<p>Scripts</p>
+<ul>
+<li>Trump tweet preparation: <a href="talks/trump-tweets-setup.R">trump-tweets-setup.R</a></li>
+<li>Trump tweet list-column example: <a href="talks/trump-tweets.R">trump-tweets.R</a></li>
+<li>Game of Thrones POV character list-column example: <a href="talks/got-pov.R">got-pov.R</a></li>
+<li>Gapminder nested data frame example <em>not here yet</em></li>
+</ul>
 </div>
 <div id="data-rectangling" class="section level3">
 <h3>Data Rectangling</h3>
