rstudio::conf talk and list-column examples

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ $(document).ready(function () {
 <li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for live-coding</em></li>
 <li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a><br />
 </li>
-<li><a href="ls20_nested-data-frame.html">Nested data frames</a></li>
+<li><a href="ls13_list-columns.html">List columns</a> <em>creating, managing, and eliminating list-columns</em></li>
 </ul>
 </div>
 <div id="worked-examples" class="section level3">
