--- a/talks.html
+++ b/talks.html
@@ -206,7 +206,10 @@ $(document).ready(function () {
 <p>Talks related to purrr.</p>
 <div id="rstudioconf-2017" class="section level3">
 <h3>rstudio::conf 2017</h3>
-<p>Slides <em>not posted yet</em></p>
+<script async class="speakerdeck-embed" data-id="8d8ba68c2ba14d42954fa2c96cf8bd5d" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<div style="margin-bottom:5px">
+<strong> <a href="https://speakerdeck.com/jennybc/putting-square-pegs-in-round-holes-using-list-cols-in-your-dataframe" title="Using list-cols in your dataframe" target="_blank">Using list-cols in your dataframe</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+</div>
 <p>Scripts</p>
 <ul>
 <li>Trump tweet preparation: <a href="talks/trump-tweets-setup.R">trump-tweets-setup.R</a></li>
