link up the nested df example

--- a/talks.html
+++ b/talks.html
@@ -215,7 +215,8 @@ $(document).ready(function () {
 <li>Trump tweet preparation: <a href="talks/trump-tweets-setup.R">trump-tweets-setup.R</a></li>
 <li>Trump tweet list-column example: <a href="talks/trump-tweets.R">trump-tweets.R</a></li>
 <li>Game of Thrones POV character list-column example: <a href="talks/got-pov.R">got-pov.R</a></li>
-<li>Gapminder nested data frame example <em>not here yet</em></li>
+<li>Gapminder nested data frame example <em>no separate script</em></li>
+<li>All 3 are now incorporated into <a href="ls13_list-columns.html">List-columns</a>.</li>
 </ul>
 </div>
 <div id="data-rectangling" class="section level3">
