--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -87,6 +89,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -220,28 +225,43 @@ $(document).ready(function () {
 </ul>
 <p>Versions of key packages:</p>
 <pre class="r"><code>devtools::session_info(c(&quot;purrr&quot;, &quot;repurrrsive&quot;))</code></pre>
-<pre><code>## Session info -------------------------------------------------------------</code></pre>
-<pre><code>##  setting  value                       
-##  version  R version 3.4.1 (2017-06-30)
-##  system   x86_64, darwin15.6.0        
-##  ui       RStudio (1.1.356)           
-##  language (EN)                        
-##  collate  en_CA.UTF-8                 
-##  tz       Europe/London               
-##  date     2017-09-10</code></pre>
-<pre><code>## Packages -----------------------------------------------------------------</code></pre>
-<pre><code>##  package     * version    date       source                          
-##  graphics    * 3.4.1      2017-07-07 local                           
-##  grDevices   * 3.4.1      2017-07-07 local                           
-##  magrittr    * 1.5        2014-11-22 CRAN (R 3.4.0)                  
-##  methods     * 3.4.1      2017-07-07 local                           
-##  purrr       * 0.2.3      2017-08-02 CRAN (R 3.4.1)                  
-##  Rcpp          0.12.12    2017-07-15 CRAN (R 3.4.1)                  
-##  repurrrsive * 0.1.0      2017-09-08 CRAN (R 3.4.1)                  
-##  rlang         0.1.2.9000 2017-09-06 Github (tidyverse/rlang@fd64bce)
-##  stats       * 3.4.1      2017-07-07 local                           
-##  tibble      * 1.3.4      2017-08-22 CRAN (R 3.4.1)                  
-##  utils       * 3.4.1      2017-07-07 local</code></pre>
+<pre><code>## ─ Session info ──────────────────────────────────────────────────────────
+##  setting  value                         
+##  version  R version 3.5.1 (2018-07-02)  
+##  os       macOS Sierra 10.12.6          
+##  system   x86_64, darwin15.6.0          
+##  ui       RStudio                       
+##  language (EN)                          
+##  collate  en_CA.UTF-8                   
+##  ctype    en_CA.UTF-8                   
+##  tz       America/Argentina/Buenos_Aires
+##  date     2018-09-02                    
+## 
+## ─ Packages ──────────────────────────────────────────────────────────────
+##  package     * version     date       source                         
+##  assertthat    0.2.0       2017-04-11 CRAN (R 3.5.0)                 
+##  cli           1.0.0.9002  2018-06-30 Github (r-lib/cli@1ce5145)     
+##  crayon        1.3.4       2017-09-16 CRAN (R 3.5.0)                 
+##  fansi         0.3.0       2018-08-13 CRAN (R 3.5.0)                 
+##  glue          1.3.0       2018-08-23 Github (tidyverse/glue@4e74901)
+##  hms           0.4.2.9001  2018-08-12 github (tidyverse/hms)         
+##  magrittr      1.5         2014-11-22 CRAN (R 3.5.0)                 
+##  pillar        1.3.0.9000  2018-08-20 Github (r-lib/pillar@3fabb4e)  
+##  pkgconfig     2.0.2       2018-08-16 CRAN (R 3.5.0)                 
+##  prettyunits   1.0.2       2015-07-13 CRAN (R 3.5.0)                 
+##  progress      1.2.0       2018-08-12 github (gaborcsardi/progress)  
+##  purrr       * 0.2.5       2018-05-29 CRAN (R 3.5.0)                 
+##  R6            2.2.2       2017-06-17 CRAN (R 3.5.0)                 
+##  Rcpp          0.12.18     2018-07-23 CRAN (R 3.5.1)                 
+##  repurrrsive * 0.1.0       2017-09-08 CRAN (R 3.5.0)                 
+##  rlang         0.2.2       2018-08-16 CRAN (R 3.5.0)                 
+##  selectr       0.4-1       2018-04-06 CRAN (R 3.5.0)                 
+##  stringi       1.2.4       2018-07-20 CRAN (R 3.5.1)                 
+##  stringr       1.3.1       2018-05-10 CRAN (R 3.5.0)                 
+##  tibble        1.4.99.9003 2018-08-30 local                          
+##  utf8          1.1.4       2018-05-24 CRAN (R 3.5.0)                 
+##  withr         2.1.2       2018-07-03 local                          
+##  xml2          1.2.0       2018-01-24 CRAN (R 3.5.0)</code></pre>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
 
