--- a/bk01_base-functions.html
+++ b/bk01_base-functions.html
@@ -23,8 +23,8 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -33,10 +33,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -90,6 +92,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -330,8 +335,8 @@ library(repurrrsive)</code></pre>
 </div>
 <div id="why-not-plyr" class="section level2">
 <h2>Why not plyr?</h2>
-<p>If you have never heard of the <a href="https://CRAN.R-project.org/package=plyr">plyr package</a>, you can skip this section! Personally, I’m a bit sad that it’s time to move on from plyr. But it probably is.</p>
-<p>Why? It’s no longer under active development. The innovation is happening elsewhere, in purrr and the other packages in the tidyverse. Also, even I must admit that plyr can be rather slow. I wouldn’t recommend writing new code that requires plyr.</p>
+<p>If you have never heard of the <a href="https://CRAN.R-project.org/package=plyr">plyr package</a>, you can skip this section! Personally, I’m a bit sad that it’s time to move on from plyr. But it is time.</p>
+<p>Why? plyr is no longer under active development. The innovation is happening elsewhere, in purrr and the other packages in the tidyverse. Also, even I must admit that plyr can be rather slow. I wouldn’t recommend writing new code that requires plyr.</p>
 <p>In terms of understanding or translating plyr code, here’s the minimum you need to know: The key feature of the main 3 * 4 = 12 functions in plyr is their explicit, memorable form.</p>
 <pre class="r"><code>XYply()</code></pre>
 <p>where <code>X</code> and <code>Y</code> specify the type of input and output, respectively. <code>X</code> and <code>Y</code> take values from here:</p>
@@ -341,7 +346,7 @@ library(repurrrsive)</code></pre>
 <li><code>l</code> = “list”</li>
 <li><code>_</code> = “nothing” (not eligible as <code>X</code> re: input, for obvious reasons)</li>
 </ul>
-<p>The most useful function proved to be <code>ddply()</code>: data frame in, data frame out. This is now handled by dplyr and tidyr. Most tasks suitable for <code>a*ply()</code> and, especially <code>l*ply()</code> are now handled by purrr’s <code>map()</code> family. The functions called for their side effects, as opposed to return value, are those named <code>*_ply()</code>; this is handled by purrr’s <code>walk()</code> functions. Marching through a data frame row by row is now a job for purrr’s <code>pmap()</code>.</p>
+<p>The most useful function proved to be <code>ddply()</code>: data frame in, data frame out. This inspired the creation of the <a href="https://dplyr.tidyverse.org">dplyr package</a>. Most tasks suitable for <code>a*ply()</code> and, especially <code>l*ply()</code> are now handled by purrr’s <code>map()</code> family. The functions called for their side effects, as opposed to return value, are those named <code>*_ply()</code>; this is handled by purrr’s <code>walk()</code> functions. Marching through a data frame row by row is now a job for purrr’s <code>pmap()</code>.</p>
 </div>
 <div id="lapply-vs.-purrrmap" class="section level2">
 <h2><code>lapply()</code> vs. <code>purrr::map()</code></h2>
@@ -427,9 +432,9 @@ vapply(c(&quot;a&quot;, &quot;b&quot;), f, character(n), n = n)
 #&gt; &quot;a&quot; &quot;b&quot;</code></pre>
 </div>
 </div>
-<div id="_-vs.-map_df" class="section level2">
-<h2>¯\_(ツ)_/¯ vs. <code>map_df()</code></h2>
-<p>The <code>purrr::map_df()</code> function is “list in, data frame out” and there is no true base equivalent. Given the centrality of data frames for analysis, it is handy to have a function to produce them, without resorting to <code>do.call()</code>.</p>
+<div id="_-vs.-map_dfr" class="section level2">
+<h2>¯\_(ツ)_/¯ vs. <code>map_dfr()</code></h2>
+<p>The <code>purrr::map_dfr()</code> function is “list in, data frame out” and there is no true base equivalent. Given the centrality of data frames for analysis, it is handy to have a function to produce them, without resorting to <code>do.call()</code>.</p>
 <div class="row">
 <div class="col-md-6">
 <p><strong>base</strong></p>
@@ -444,17 +449,17 @@ mat &lt;- do.call(rbind, l)
 </div>
 <div class="col-md-6">
 <p><strong>purrr</strong></p>
-<pre class="r"><code>map_df(got_chars[23:25],
-       `[`, c(&quot;name&quot;, &quot;playedBy&quot;))
+<pre class="r"><code>map_dfr(got_chars[23:25],
+        `[`, c(&quot;name&quot;, &quot;playedBy&quot;))
 #&gt; # A tibble: 3 x 2
-#&gt;              name      playedBy
-#&gt;             &lt;chr&gt;         &lt;chr&gt;
-#&gt; 1        Jon Snow Kit Harington
-#&gt; 2   Aeron Greyjoy Michael Feast
-#&gt; 3 Kevan Lannister    Ian Gelder</code></pre>
+#&gt;   name            playedBy     
+#&gt;   &lt;chr&gt;           &lt;chr&gt;        
+#&gt; 1 Jon Snow        Kit Harington
+#&gt; 2 Aeron Greyjoy   Michael Feast
+#&gt; 3 Kevan Lannister Ian Gelder</code></pre>
 </div>
 </div>
-<p>The base workflow above gets trickier if you’re extracting elements of disparate type. At that point, it may make more sense to use <code>vapply()</code> repeatedly. For comparability, we’ll show similar using purrr’s type-specific mapping, which is also safer than relying on automatic type conversion from <code>map_df()</code>.</p>
+<p>The base workflow above gets trickier if you’re extracting elements of disparate type. At that point, it may make more sense to use <code>vapply()</code> repeatedly. For comparability, we’ll show similar using purrr’s type-specific mapping, which is also safer than relying on automatic type conversion from <code>map_dfr()</code>.</p>
 <div class="row">
 <div class="col-md-6">
 <p><strong>base</strong></p>
@@ -477,10 +482,10 @@ mat &lt;- do.call(rbind, l)
   id = map_int(got_chars[23:25], &quot;id&quot;)
 )
 #&gt; # A tibble: 3 x 2
-#&gt;              name    id
-#&gt;             &lt;chr&gt; &lt;int&gt;
-#&gt; 1        Jon Snow   583
-#&gt; 2   Aeron Greyjoy    60
+#&gt;   name               id
+#&gt;   &lt;chr&gt;           &lt;int&gt;
+#&gt; 1 Jon Snow          583
+#&gt; 2 Aeron Greyjoy      60
 #&gt; 3 Kevan Lannister   605</code></pre>
 </div>
 </div>
@@ -540,11 +545,11 @@ library(gapminder)
     droplevels())
 #&gt; # A tibble: 4 x 6
 #&gt;   country continent  year lifeExp      pop gdpPercap
-#&gt;    &lt;fctr&gt;    &lt;fctr&gt; &lt;int&gt;   &lt;dbl&gt;    &lt;int&gt;     &lt;dbl&gt;
-#&gt; 1  Canada  Americas  2002  79.770 31902268  33328.97
-#&gt; 2  Canada  Americas  2007  80.653 33390141  36319.24
-#&gt; 3 Germany    Europe  2002  78.670 82350671  30035.80
-#&gt; 4 Germany    Europe  2007  79.406 82400996  32170.37</code></pre>
+#&gt;   &lt;fct&gt;   &lt;fct&gt;     &lt;int&gt;   &lt;dbl&gt;    &lt;int&gt;     &lt;dbl&gt;
+#&gt; 1 Canada  Americas   2002    79.8 31902268    33329.
+#&gt; 2 Canada  Americas   2007    80.7 33390141    36319.
+#&gt; 3 Germany Europe     2002    78.7 82350671    30036.
+#&gt; 4 Germany Europe     2007    79.4 82400996    32170.</code></pre>
 <p>Simple summary of a single variable for each country. Specifically, take the mean of life expectancy. In this case, the formula method of base <code>aggregate()</code> is quite nice, i.e. it returns a convenient data frame.</p>
 <div class="row">
 <div class="col-md-6">
@@ -561,9 +566,9 @@ library(gapminder)
   summarize(lifeExp = mean(lifeExp))
 #&gt; # A tibble: 2 x 2
 #&gt;   country lifeExp
-#&gt;    &lt;fctr&gt;   &lt;dbl&gt;
-#&gt; 1  Canada 80.2115
-#&gt; 2 Germany 79.0380</code></pre>
+#&gt;   &lt;fct&gt;     &lt;dbl&gt;
+#&gt; 1 Canada     80.2
+#&gt; 2 Germany    79.0</code></pre>
 </div>
 </div>
 <p>Simple summaries of two variables for each country. We take the mean of life expectancy and of GDP per capita.</p>
@@ -604,9 +609,9 @@ tapply(mini_gap$lifeExp, mini_gap$country, mean, simplify = FALSE)
   summarize_at(vars(lifeExp, gdpPercap), mean)
 #&gt; # A tibble: 2 x 3
 #&gt;   country lifeExp gdpPercap
-#&gt;    &lt;fctr&gt;   &lt;dbl&gt;     &lt;dbl&gt;
-#&gt; 1  Canada 80.2115  34824.10
-#&gt; 2 Germany 79.0380  31103.09</code></pre>
+#&gt;   &lt;fct&gt;     &lt;dbl&gt;     &lt;dbl&gt;
+#&gt; 1 Canada     80.2    34824.
+#&gt; 2 Germany    79.0    31103.</code></pre>
 </div>
 </div>
 <p>Bivariate summary of two variables for each country. We compute the correlation of life expectancy and year, for the full gapminder dataset now. On the base side, we can no longer use <code>aggregate()</code> or <code>tapply()</code> and need to graduate to <code>by()</code>.</p>
@@ -648,19 +653,19 @@ head(by_obj)
   group_by(country) %&gt;% 
   summarize(cor = cor(lifeExp, year))
 #&gt; # A tibble: 142 x 2
-#&gt;        country       cor
-#&gt;         &lt;fctr&gt;     &lt;dbl&gt;
-#&gt;  1 Afghanistan 0.9735051
-#&gt;  2     Albania 0.9542420
-#&gt;  3     Algeria 0.9925307
-#&gt;  4      Angola 0.9422392
-#&gt;  5   Argentina 0.9977816
-#&gt;  6   Australia 0.9897716
-#&gt;  7     Austria 0.9960592
-#&gt;  8     Bahrain 0.9832293
-#&gt;  9  Bangladesh 0.9946662
-#&gt; 10     Belgium 0.9972665
-#&gt; # ... with 132 more rows</code></pre>
+#&gt;    country       cor
+#&gt;    &lt;fct&gt;       &lt;dbl&gt;
+#&gt;  1 Afghanistan 0.974
+#&gt;  2 Albania     0.954
+#&gt;  3 Algeria     0.993
+#&gt;  4 Angola      0.942
+#&gt;  5 Argentina   0.998
+#&gt;  6 Australia   0.990
+#&gt;  7 Austria     0.996
+#&gt;  8 Bahrain     0.983
+#&gt;  9 Bangladesh  0.995
+#&gt; 10 Belgium     0.997
+#&gt; # … with 132 more rows</code></pre>
 </div>
 </div>
 <p>This is a good place to pause and glance back over the base vs tidyverse calls and results in this section. It shows that you can absolutely do these tasks either way, but the consistency of the code and return values is higher in the tidyverse.</p>
@@ -794,19 +799,19 @@ head(coefs)
          slope = map_dbl(coefs, 2)) %&gt;% 
   select(country, continent, intercept, slope)
 #&gt; # A tibble: 142 x 4
-#&gt;        country continent  intercept     slope
-#&gt;         &lt;fctr&gt;    &lt;fctr&gt;      &lt;dbl&gt;     &lt;dbl&gt;
-#&gt;  1 Afghanistan      Asia  -507.5343 0.2753287
-#&gt;  2     Albania    Europe  -594.0725 0.3346832
-#&gt;  3     Algeria    Africa -1067.8590 0.5692797
-#&gt;  4      Angola    Africa  -376.5048 0.2093399
-#&gt;  5   Argentina  Americas  -389.6063 0.2317084
-#&gt;  6   Australia   Oceania  -376.1163 0.2277238
-#&gt;  7     Austria    Europe  -405.9205 0.2419923
-#&gt;  8     Bahrain      Asia  -859.8258 0.4675077
-#&gt;  9  Bangladesh      Asia  -936.2158 0.4981308
-#&gt; 10     Belgium    Europe  -340.2412 0.2090846
-#&gt; # ... with 132 more rows</code></pre>
+#&gt;    country     continent intercept slope
+#&gt;    &lt;fct&gt;       &lt;fct&gt;         &lt;dbl&gt; &lt;dbl&gt;
+#&gt;  1 Afghanistan Asia          -508. 0.275
+#&gt;  2 Albania     Europe        -594. 0.335
+#&gt;  3 Algeria     Africa       -1068. 0.569
+#&gt;  4 Angola      Africa        -377. 0.209
+#&gt;  5 Argentina   Americas      -390. 0.232
+#&gt;  6 Australia   Oceania       -376. 0.228
+#&gt;  7 Austria     Europe        -406. 0.242
+#&gt;  8 Bahrain     Asia          -860. 0.468
+#&gt;  9 Bangladesh  Asia          -936. 0.498
+#&gt; 10 Belgium     Europe        -340. 0.209
+#&gt; # … with 132 more rows</code></pre>
 </div>
 </div>
 <p>This illustrates the post-processing that is often necessary in a base workflow. We need to restore the country info from the names of <code>by_obj</code>, use them to look up the continents in gapminder, and then restore the original factor levels for both country and continent. It illustrates the payoff for temporarily tolerating the <code>data</code> and <code>fit</code> list-columns in the nested data frame used in the tidyverse workflow. The country and continent factors remain intact and directly associated with the data and fits.</p>
