--- a/ls02_map-extraction-advanced.html
+++ b/ls02_map-extraction-advanced.html
@@ -23,12 +23,12 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
-<script src="site_libs/htmlwidgets-0.9/htmlwidgets.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<script src="site_libs/htmlwidgets-1.2/htmlwidgets.js"></script>
 <link href="site_libs/jsoneditor-5.5.5/jsoneditor.min.css" rel="stylesheet" />
 <script src="site_libs/jsoneditor-5.5.5/jsoneditor.min.js"></script>
-<script src="site_libs/jsonedit-binding-1.4.0/jsonedit.js"></script>
+<script src="site_libs/jsonedit-binding-2.0.0/jsonedit.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -37,10 +37,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -94,6 +96,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -518,14 +523,14 @@ str(x[3:4])
 <p>This is what <code>map_df()</code> is for.</p>
 <pre class="r"><code>map_df(gh_users, `[`, c(&quot;login&quot;, &quot;name&quot;, &quot;id&quot;, &quot;location&quot;))
 #&gt; # A tibble: 6 x 4
-#&gt;         login                   name       id               location
-#&gt;         &lt;chr&gt;                  &lt;chr&gt;    &lt;int&gt;                  &lt;chr&gt;
-#&gt; 1 gaborcsardi           Gábor Csárdi   660288         Chippenham, UK
-#&gt; 2     jennybc Jennifer (Jenny) Bryan   599454  Vancouver, BC, Canada
-#&gt; 3      jtleek                Jeff L.  1571674           Baltimore,MD
-#&gt; 4  juliasilge            Julia Silge 12505835     Salt Lake City, UT
-#&gt; 5      leeper       Thomas J. Leeper  3505428 London, United Kingdom
-#&gt; 6    masalmon          Maëlle Salmon  8360597       Barcelona, Spain</code></pre>
+#&gt;   login       name                         id location              
+#&gt;   &lt;chr&gt;       &lt;chr&gt;                     &lt;int&gt; &lt;chr&gt;                 
+#&gt; 1 gaborcsardi Gábor Csárdi             660288 Chippenham, UK        
+#&gt; 2 jennybc     Jennifer (Jenny) Bryan   599454 Vancouver, BC, Canada 
+#&gt; 3 jtleek      Jeff L.                 1571674 Baltimore,MD          
+#&gt; 4 juliasilge  Julia Silge            12505835 Salt Lake City, UT    
+#&gt; 5 leeper      Thomas J. Leeper        3505428 London, United Kingdom
+#&gt; 6 masalmon    Maëlle Salmon           8360597 Barcelona, Spain</code></pre>
 <p>Finally! A data frame! Hallelujah!</p>
 <p>Notice how the variables have been automatically type converted. It’s a beautiful thing. Until it’s not. When programming, it is safer, but more cumbersome, to explicitly specify type and build your data frame the usual way.</p>
 <pre class="r"><code>gh_users %&gt;% {
@@ -537,14 +542,14 @@ str(x[3:4])
   )
 }
 #&gt; # A tibble: 6 x 4
-#&gt;         login                   name       id               location
-#&gt;         &lt;chr&gt;                  &lt;chr&gt;    &lt;int&gt;                  &lt;chr&gt;
-#&gt; 1 gaborcsardi           Gábor Csárdi   660288         Chippenham, UK
-#&gt; 2     jennybc Jennifer (Jenny) Bryan   599454  Vancouver, BC, Canada
-#&gt; 3      jtleek                Jeff L.  1571674           Baltimore,MD
-#&gt; 4  juliasilge            Julia Silge 12505835     Salt Lake City, UT
-#&gt; 5      leeper       Thomas J. Leeper  3505428 London, United Kingdom
-#&gt; 6    masalmon          Maëlle Salmon  8360597       Barcelona, Spain</code></pre>
+#&gt;   login       name                         id location              
+#&gt;   &lt;chr&gt;       &lt;chr&gt;                     &lt;int&gt; &lt;chr&gt;                 
+#&gt; 1 gaborcsardi Gábor Csárdi             660288 Chippenham, UK        
+#&gt; 2 jennybc     Jennifer (Jenny) Bryan   599454 Vancouver, BC, Canada 
+#&gt; 3 jtleek      Jeff L.                 1571674 Baltimore,MD          
+#&gt; 4 juliasilge  Julia Silge            12505835 Salt Lake City, UT    
+#&gt; 5 leeper      Thomas J. Leeper        3505428 London, United Kingdom
+#&gt; 6 masalmon    Maëlle Salmon           8360597 Barcelona, Spain</code></pre>
 <div id="exercises-4" class="section level4">
 <h4>Exercises</h4>
 <ol style="list-style-type: decimal">
@@ -618,26 +623,26 @@ str(x[3:4])
     set_names(unames) %&gt;% 
     enframe(&quot;username&quot;, &quot;gh_repos&quot;))
 #&gt; # A tibble: 6 x 2
-#&gt;      username    gh_repos
-#&gt;         &lt;chr&gt;      &lt;list&gt;
+#&gt;   username    gh_repos   
+#&gt;   &lt;chr&gt;       &lt;list&gt;     
 #&gt; 1 gaborcsardi &lt;list [30]&gt;
-#&gt; 2     jennybc &lt;list [30]&gt;
-#&gt; 3      jtleek &lt;list [30]&gt;
-#&gt; 4  juliasilge &lt;list [26]&gt;
-#&gt; 5      leeper &lt;list [30]&gt;
-#&gt; 6    masalmon &lt;list [30]&gt;</code></pre>
+#&gt; 2 jennybc     &lt;list [30]&gt;
+#&gt; 3 jtleek      &lt;list [30]&gt;
+#&gt; 4 juliasilge  &lt;list [26]&gt;
+#&gt; 5 leeper      &lt;list [30]&gt;
+#&gt; 6 masalmon    &lt;list [30]&gt;</code></pre>
 <p>Build confidence by doing something modest on the list-column of repos. This is your introduction to another powerful, general technique: <code>map()</code> inside <code>mutate()</code>. Note we are now bringing the data frame wrangling tools from dplyr and tidyr to bear.</p>
 <pre class="r"><code>udf %&gt;% 
   mutate(n_repos = map_int(gh_repos, length))
 #&gt; # A tibble: 6 x 3
-#&gt;      username    gh_repos n_repos
-#&gt;         &lt;chr&gt;      &lt;list&gt;   &lt;int&gt;
+#&gt;   username    gh_repos    n_repos
+#&gt;   &lt;chr&gt;       &lt;list&gt;        &lt;int&gt;
 #&gt; 1 gaborcsardi &lt;list [30]&gt;      30
-#&gt; 2     jennybc &lt;list [30]&gt;      30
-#&gt; 3      jtleek &lt;list [30]&gt;      30
-#&gt; 4  juliasilge &lt;list [26]&gt;      26
-#&gt; 5      leeper &lt;list [30]&gt;      30
-#&gt; 6    masalmon &lt;list [30]&gt;      30</code></pre>
+#&gt; 2 jennybc     &lt;list [30]&gt;      30
+#&gt; 3 jtleek      &lt;list [30]&gt;      30
+#&gt; 4 juliasilge  &lt;list [26]&gt;      26
+#&gt; 5 leeper      &lt;list [30]&gt;      30
+#&gt; 6 masalmon    &lt;list [30]&gt;      30</code></pre>
 <p>This shows that we know how to operate on a list-column inside a tibble.</p>
 <p>Figure out how to do what we want for a single user, i.e. for a single element of <code>udf$gh_repos</code>. Walk before you run.</p>
 <p>How far to we need to drill to get a single repo? How do we create “one row’s worth” of data for this repo? How do we do that for all repos for a single user?</p>
@@ -666,33 +671,33 @@ one_repo[c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&quot;)]
 ## make a data frame of that info for all a user&#39;s repos
 map_df(one_user, `[`, c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&quot;))
 #&gt; # A tibble: 30 x 3
-#&gt;           name  fork open_issues
-#&gt;          &lt;chr&gt; &lt;lgl&gt;       &lt;int&gt;
-#&gt;  1       after FALSE           0
-#&gt;  2      argufy FALSE           6
-#&gt;  3         ask FALSE           4
+#&gt;    name        fork  open_issues
+#&gt;    &lt;chr&gt;       &lt;lgl&gt;       &lt;int&gt;
+#&gt;  1 after       FALSE           0
+#&gt;  2 argufy      FALSE           6
+#&gt;  3 ask         FALSE           4
 #&gt;  4 baseimports FALSE           0
-#&gt;  5      citest  TRUE           0
-#&gt;  6  clisymbols FALSE           0
-#&gt;  7      cmaker  TRUE           0
-#&gt;  8       cmark  TRUE           0
-#&gt;  9  conditions  TRUE           0
-#&gt; 10      crayon FALSE           7
-#&gt; # ... with 20 more rows
+#&gt;  5 citest      TRUE            0
+#&gt;  6 clisymbols  FALSE           0
+#&gt;  7 cmaker      TRUE            0
+#&gt;  8 cmark       TRUE            0
+#&gt;  9 conditions  TRUE            0
+#&gt; 10 crayon      FALSE           7
+#&gt; # … with 20 more rows
 ## YYAAAASSSSSSS</code></pre>
 <p>Now we scale this up to all of our users. Yes, we use mutate to <code>map()</code> inside a <code>map()</code>.</p>
 <pre class="r"><code>udf %&gt;% 
   mutate(repo_info = gh_repos %&gt;%
            map(. %&gt;% map_df(`[`, c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&quot;))))
 #&gt; # A tibble: 6 x 3
-#&gt;      username    gh_repos         repo_info
-#&gt;         &lt;chr&gt;      &lt;list&gt;            &lt;list&gt;
-#&gt; 1 gaborcsardi &lt;list [30]&gt; &lt;tibble [30 x 3]&gt;
-#&gt; 2     jennybc &lt;list [30]&gt; &lt;tibble [30 x 3]&gt;
-#&gt; 3      jtleek &lt;list [30]&gt; &lt;tibble [30 x 3]&gt;
-#&gt; 4  juliasilge &lt;list [26]&gt; &lt;tibble [26 x 3]&gt;
-#&gt; 5      leeper &lt;list [30]&gt; &lt;tibble [30 x 3]&gt;
-#&gt; 6    masalmon &lt;list [30]&gt; &lt;tibble [30 x 3]&gt;</code></pre>
+#&gt;   username    gh_repos    repo_info        
+#&gt;   &lt;chr&gt;       &lt;list&gt;      &lt;list&gt;           
+#&gt; 1 gaborcsardi &lt;list [30]&gt; &lt;tibble [30 × 3]&gt;
+#&gt; 2 jennybc     &lt;list [30]&gt; &lt;tibble [30 × 3]&gt;
+#&gt; 3 jtleek      &lt;list [30]&gt; &lt;tibble [30 × 3]&gt;
+#&gt; 4 juliasilge  &lt;list [26]&gt; &lt;tibble [26 × 3]&gt;
+#&gt; 5 leeper      &lt;list [30]&gt; &lt;tibble [30 × 3]&gt;
+#&gt; 6 masalmon    &lt;list [30]&gt; &lt;tibble [30 × 3]&gt;</code></pre>
 <p>The user-specific tibbles about each user’s repos are now sitting in the <code>repo_info</code>. How do we simplify this to a normal data frame that is free of list-columns? Remove the <code>gh_repos</code> variable, which has served its purpose and use <code>tidyr::unnest()</code>.</p>
 <pre class="r"><code>(rdf &lt;- udf %&gt;% 
    mutate(
@@ -702,19 +707,19 @@ map_df(one_user, `[`, c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&qu
    select(-gh_repos) %&gt;% 
    tidyr::unnest())
 #&gt; # A tibble: 176 x 4
-#&gt;       username        name  fork open_issues
-#&gt;          &lt;chr&gt;       &lt;chr&gt; &lt;lgl&gt;       &lt;int&gt;
-#&gt;  1 gaborcsardi       after FALSE           0
-#&gt;  2 gaborcsardi      argufy FALSE           6
-#&gt;  3 gaborcsardi         ask FALSE           4
+#&gt;    username    name        fork  open_issues
+#&gt;    &lt;chr&gt;       &lt;chr&gt;       &lt;lgl&gt;       &lt;int&gt;
+#&gt;  1 gaborcsardi after       FALSE           0
+#&gt;  2 gaborcsardi argufy      FALSE           6
+#&gt;  3 gaborcsardi ask         FALSE           4
 #&gt;  4 gaborcsardi baseimports FALSE           0
-#&gt;  5 gaborcsardi      citest  TRUE           0
-#&gt;  6 gaborcsardi  clisymbols FALSE           0
-#&gt;  7 gaborcsardi      cmaker  TRUE           0
-#&gt;  8 gaborcsardi       cmark  TRUE           0
-#&gt;  9 gaborcsardi  conditions  TRUE           0
-#&gt; 10 gaborcsardi      crayon FALSE           7
-#&gt; # ... with 166 more rows</code></pre>
+#&gt;  5 gaborcsardi citest      TRUE            0
+#&gt;  6 gaborcsardi clisymbols  FALSE           0
+#&gt;  7 gaborcsardi cmaker      TRUE            0
+#&gt;  8 gaborcsardi cmark       TRUE            0
+#&gt;  9 gaborcsardi conditions  TRUE            0
+#&gt; 10 gaborcsardi crayon      FALSE           7
+#&gt; # … with 166 more rows</code></pre>
 <p>Let’s do a little manipulation with dplyr to find some of the more interesting repos and get repos from each user in front of our eyeballs. I get rid of forks and show the 3 repos for each user that have the most open issues. (Remember we are only working with the first 30 repos for each user – I had to remember my open issue situation is much more grim than this table suggests.)</p>
 <pre class="r"><code>rdf %&gt;% 
   filter(!fork) %&gt;% 
@@ -724,26 +729,26 @@ map_df(one_user, `[`, c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&qu
   slice(1:3)
 #&gt; # A tibble: 18 x 3
 #&gt; # Groups:   username [6]
-#&gt;       username                     name open_issues
-#&gt;          &lt;chr&gt;                    &lt;chr&gt;       &lt;int&gt;
-#&gt;  1 gaborcsardi                       gh           8
-#&gt;  2 gaborcsardi                   crayon           7
-#&gt;  3 gaborcsardi                   argufy           6
-#&gt;  4     jennybc         2014-01-27-miami           4
-#&gt;  5     jennybc                    bingo           3
-#&gt;  6     jennybc                    candy           2
-#&gt;  7      jtleek              datasharing         399
-#&gt;  8      jtleek             dataanalysis           5
-#&gt;  9      jtleek                 genstats           3
-#&gt; 10  juliasilge                 tidytext           5
-#&gt; 11  juliasilge choroplethrUTCensusTract           0
-#&gt; 12  juliasilge          CountyHealthApp           0
-#&gt; 13      leeper             crandatapkgs          12
-#&gt; 14      leeper                     csvy           2
-#&gt; 15      leeper                  ciplotm           1
-#&gt; 16    masalmon                     cpcb           5
-#&gt; 17    masalmon              rtimicropem           5
-#&gt; 18    masalmon                    laads           4</code></pre>
+#&gt;    username    name                     open_issues
+#&gt;    &lt;chr&gt;       &lt;chr&gt;                          &lt;int&gt;
+#&gt;  1 gaborcsardi gh                                 8
+#&gt;  2 gaborcsardi crayon                             7
+#&gt;  3 gaborcsardi argufy                             6
+#&gt;  4 jennybc     2014-01-27-miami                   4
+#&gt;  5 jennybc     bingo                              3
+#&gt;  6 jennybc     candy                              2
+#&gt;  7 jtleek      datasharing                      399
+#&gt;  8 jtleek      dataanalysis                       5
+#&gt;  9 jtleek      genstats                           3
+#&gt; 10 juliasilge  tidytext                           5
+#&gt; 11 juliasilge  choroplethrUTCensusTract           0
+#&gt; 12 juliasilge  CountyHealthApp                    0
+#&gt; 13 leeper      crandatapkgs                      12
+#&gt; 14 leeper      csvy                               2
+#&gt; 15 leeper      ciplotm                            1
+#&gt; 16 masalmon    cpcb                               5
+#&gt; 17 masalmon    rtimicropem                        5
+#&gt; 18 masalmon    laads                              4</code></pre>
 </div>
 <div id="appendix" class="section level3">
 <h3>Appendix</h3>
