--- a/ls03_map-function-syntax.html
+++ b/ls03_map-function-syntax.html
@@ -23,8 +23,8 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -33,10 +33,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -90,6 +92,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -420,13 +425,12 @@ got_chars[15:17] %&gt;%                   ## I am a programming god
 map_chr(aliases[c(3, 10, 20, 24)], ~ paste(.x, collapse = &quot; | &quot;)) %&gt;% 
   tibble::enframe(value = &quot;aliases&quot;)
 #&gt; # A tibble: 4 x 2
-#&gt;                name
-#&gt;               &lt;chr&gt;
-#&gt; 1 Victarion Greyjoy
-#&gt; 2    Davos Seaworth
-#&gt; 3      Eddard Stark
-#&gt; 4     Aeron Greyjoy
-#&gt; # ... with 1 more variables: aliases &lt;chr&gt;</code></pre>
+#&gt;   name            aliases                                                 
+#&gt;   &lt;chr&gt;           &lt;chr&gt;                                                   
+#&gt; 1 Victarion Grey… The Iron Captain                                        
+#&gt; 2 Davos Seaworth  Onion Knight | Davos Shorthand | Ser Onions | Onion Lor…
+#&gt; 3 Eddard Stark    Ned | The Ned | The Quiet Wolf                          
+#&gt; 4 Aeron Greyjoy   The Damphair | Aeron Damphair</code></pre>
 <p>Alternative way to get same data frame</p>
 <pre class="r"><code>tibble::tibble(
   name = map_chr(got_chars, &quot;name&quot;),
@@ -436,13 +440,12 @@ map_chr(aliases[c(3, 10, 20, 24)], ~ paste(.x, collapse = &quot; | &quot;)) %&gt
 ) %&gt;% 
   dplyr::slice(c(3, 10, 20, 24))
 #&gt; # A tibble: 4 x 2
-#&gt;                name
-#&gt;               &lt;chr&gt;
-#&gt; 1 Victarion Greyjoy
-#&gt; 2    Davos Seaworth
-#&gt; 3      Eddard Stark
-#&gt; 4     Aeron Greyjoy
-#&gt; # ... with 1 more variables: aliases &lt;chr&gt;</code></pre>
+#&gt;   name            aliases                                                 
+#&gt;   &lt;chr&gt;           &lt;chr&gt;                                                   
+#&gt; 1 Victarion Grey… The Iron Captain                                        
+#&gt; 2 Davos Seaworth  Onion Knight | Davos Shorthand | Ser Onions | Onion Lor…
+#&gt; 3 Eddard Stark    Ned | The Ned | The Quiet Wolf                          
+#&gt; 4 Aeron Greyjoy   The Damphair | Aeron Damphair</code></pre>
 <p>This is a very typical workflow: take an unwieldy nested list and, via extraction and/or simplification, produce a more approachable data frame.</p>
 </div>
 <div id="recap" class="section level2">
@@ -473,7 +476,7 @@ map(aliases, ~ paste(.x, collapse = &quot; | &quot;))</code></pre>
 map(INPUT_ONE, INPUT_TWO, FUNCTION_TO_APPLY, OPTIONAL_OTHER_STUFF)</code></pre>
 <p><code>map2()</code> has all the type-specific friends you would expect: <code>map2_chr()</code>, <code>map2_lgl()</code>, etc.</p>
 <p>How will we specify the function to apply? All the usual options are open.</p>
-<p>What shall out example be? Each character has a free text field, giving the date and possibly location of his or her birth. Let’s paste that together with the character’s name to get a sentence.</p>
+<p>What shall our example be? Each character has a free text field, giving the date and possibly location of his or her birth. Let’s paste that together with the character’s name to get a sentence.</p>
 <p>First, obtain the two inputs.</p>
 <pre class="r"><code>nms &lt;- got_chars %&gt;% 
   map_chr(&quot;name&quot;)
