--- a/ls08_trump-tweets.html
+++ b/ls08_trump-tweets.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -87,6 +89,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -246,31 +251,40 @@ tweets %&gt;% strtrim(70)
 <pre class="r"><code>matches &lt;- gregexpr(regex, tweets)
 str(matches)
 #&gt; List of 7
-#&gt;  $ : atomic [1:1] -1
+#&gt;  $ : int -1
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int -1
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:1] -1
+#&gt;  $ : int -1
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int -1
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:1] 20
+#&gt;  $ : int 20
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int 5
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:1] 134
+#&gt;  $ : int 134
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int 4
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:2] 28 95
+#&gt;  $ : int [1:2] 28 95
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int [1:2] 6 4
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:2] 87 114
+#&gt;  $ : int [1:2] 87 114
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int [1:2] 4 6
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
-#&gt;  $ : atomic [1:3] 50 112 123
+#&gt;  $ : int [1:3] 50 112 123
 #&gt;   ..- attr(*, &quot;match.length&quot;)= int [1:3] 4 4 4
+#&gt;   ..- attr(*, &quot;index.type&quot;)= chr &quot;chars&quot;
 #&gt;   ..- attr(*, &quot;useBytes&quot;)= logi TRUE
 matches[[7]]
 #&gt; [1]  50 112 123
 #&gt; attr(,&quot;match.length&quot;)
 #&gt; [1] 4 4 4
+#&gt; attr(,&quot;index.type&quot;)
+#&gt; [1] &quot;chars&quot;
 #&gt; attr(,&quot;useBytes&quot;)
 #&gt; [1] TRUE</code></pre>
 <p>What is <code>matches</code>?!?</p>
@@ -305,10 +319,7 @@ But we don’t have anything to use for <code>last</code> yet.<br />
 This is going to be Job #1.<br />
 Job #2 is to insert <code>substring()</code> and <code>tweets</code> + <code>matches</code> + result of Job #1 into the <code>purrr::map()</code> machinery.</p>
 <p>Here’s where we are heading:</p>
-<div class="figure">
-<img src="purrr-slides-trump-tweets.png" />
-
-</div>
+<p><img src="purrr-slides-trump-tweets.png" /></p>
 </div>
 <div id="get-you-know-your-awkward-list" class="section level3">
 <h3>Get you know your Awkward List</h3>
