--- a/ls12_different-sized-samples.html
+++ b/ls12_different-sized-samples.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -87,6 +89,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -234,11 +239,11 @@ set.seed(4561)
     nest() %&gt;%              # --&gt; one row per Species
     mutate(n = c(2, 5, 3))) # add sample sizes
 #&gt; # A tibble: 3 x 3
-#&gt;      Species              data     n
-#&gt;       &lt;fctr&gt;            &lt;list&gt; &lt;dbl&gt;
-#&gt; 1     setosa &lt;tibble [50 x 4]&gt;     2
-#&gt; 2 versicolor &lt;tibble [50 x 4]&gt;     5
-#&gt; 3  virginica &lt;tibble [50 x 4]&gt;     3</code></pre>
+#&gt;   Species    data                  n
+#&gt;   &lt;fct&gt;      &lt;list&gt;            &lt;dbl&gt;
+#&gt; 1 setosa     &lt;tibble [50 × 4]&gt;     2
+#&gt; 2 versicolor &lt;tibble [50 × 4]&gt;     5
+#&gt; 3 virginica  &lt;tibble [50 × 4]&gt;     3</code></pre>
 <p>Draw the samples.</p>
 <ul>
 <li><code>purrr::map2()</code> is good since we want to operate on 2 things <code>(data = DATA FOR ONE SPECIES, n = SAMPLE SIZE)</code>.</li>
@@ -249,11 +254,11 @@ set.seed(4561)
 <pre class="r"><code>(sampled_iris &lt;- nested_iris %&gt;%
   mutate(samp = map2(data, n, sample_n)))
 #&gt; # A tibble: 3 x 4
-#&gt;      Species              data     n             samp
-#&gt;       &lt;fctr&gt;            &lt;list&gt; &lt;dbl&gt;           &lt;list&gt;
-#&gt; 1     setosa &lt;tibble [50 x 4]&gt;     2 &lt;tibble [2 x 4]&gt;
-#&gt; 2 versicolor &lt;tibble [50 x 4]&gt;     5 &lt;tibble [5 x 4]&gt;
-#&gt; 3  virginica &lt;tibble [50 x 4]&gt;     3 &lt;tibble [3 x 4]&gt;</code></pre>
+#&gt;   Species    data                  n samp            
+#&gt;   &lt;fct&gt;      &lt;list&gt;            &lt;dbl&gt; &lt;list&gt;          
+#&gt; 1 setosa     &lt;tibble [50 × 4]&gt;     2 &lt;tibble [2 × 4]&gt;
+#&gt; 2 versicolor &lt;tibble [50 × 4]&gt;     5 &lt;tibble [5 × 4]&gt;
+#&gt; 3 virginica  &lt;tibble [50 × 4]&gt;     3 &lt;tibble [3 × 4]&gt;</code></pre>
 <p>What came back? More <code>Species</code>-specific data frames.</p>
 <p>We are in that uncomfortable intermediate state, with two list-columns: the original <code>data</code> and the sampled data, <code>samp</code>. Let’s get back to a normal data frame!</p>
 <ul>
@@ -264,18 +269,18 @@ set.seed(4561)
   select(Species, samp) %&gt;%
   unnest()
 #&gt; # A tibble: 10 x 5
-#&gt;       Species Sepal.Length Sepal.Width Petal.Length Petal.Width
-#&gt;        &lt;fctr&gt;        &lt;dbl&gt;       &lt;dbl&gt;        &lt;dbl&gt;       &lt;dbl&gt;
-#&gt;  1     setosa          4.6         3.1          1.5         0.2
-#&gt;  2     setosa          4.5         2.3          1.3         0.3
+#&gt;    Species    Sepal.Length Sepal.Width Petal.Length Petal.Width
+#&gt;    &lt;fct&gt;             &lt;dbl&gt;       &lt;dbl&gt;        &lt;dbl&gt;       &lt;dbl&gt;
+#&gt;  1 setosa              4.6         3.1          1.5         0.2
+#&gt;  2 setosa              4.5         2.3          1.3         0.3
 #&gt;  3 versicolor          5.6         2.5          3.9         1.1
 #&gt;  4 versicolor          6.1         2.9          4.7         1.4
 #&gt;  5 versicolor          6.1         2.8          4.7         1.2
 #&gt;  6 versicolor          6.6         2.9          4.6         1.3
-#&gt;  7 versicolor          5.7         2.6          3.5         1.0
-#&gt;  8  virginica          6.3         2.7          4.9         1.8
-#&gt;  9  virginica          6.9         3.1          5.1         2.3
-#&gt; 10  virginica          6.7         3.1          5.6         2.4</code></pre>
+#&gt;  7 versicolor          5.7         2.6          3.5         1  
+#&gt;  8 virginica           6.3         2.7          4.9         1.8
+#&gt;  9 virginica           6.9         3.1          5.1         2.3
+#&gt; 10 virginica           6.7         3.1          5.6         2.4</code></pre>
 <p>Again, from the top, with no exposition:</p>
 <pre class="r"><code>iris %&gt;%
   group_by(Species) %&gt;% 
@@ -285,18 +290,18 @@ set.seed(4561)
   select(Species, samp) %&gt;%
   unnest()
 #&gt; # A tibble: 10 x 5
-#&gt;       Species Sepal.Length Sepal.Width Petal.Length Petal.Width
-#&gt;        &lt;fctr&gt;        &lt;dbl&gt;       &lt;dbl&gt;        &lt;dbl&gt;       &lt;dbl&gt;
-#&gt;  1     setosa          5.4         3.4          1.7         0.2
-#&gt;  2     setosa          5.5         3.5          1.3         0.2
+#&gt;    Species    Sepal.Length Sepal.Width Petal.Length Petal.Width
+#&gt;    &lt;fct&gt;             &lt;dbl&gt;       &lt;dbl&gt;        &lt;dbl&gt;       &lt;dbl&gt;
+#&gt;  1 setosa              5.4         3.4          1.7         0.2
+#&gt;  2 setosa              5.5         3.5          1.3         0.2
 #&gt;  3 versicolor          6.6         2.9          4.6         1.3
 #&gt;  4 versicolor          6.9         3.1          4.9         1.5
 #&gt;  5 versicolor          5.8         2.7          3.9         1.2
-#&gt;  6 versicolor          6.0         2.7          5.1         1.6
+#&gt;  6 versicolor          6           2.7          5.1         1.6
 #&gt;  7 versicolor          6.2         2.9          4.3         1.3
-#&gt;  8  virginica          6.4         3.2          5.3         2.3
-#&gt;  9  virginica          6.5         3.0          5.5         1.8
-#&gt; 10  virginica          6.1         3.0          4.9         1.8</code></pre>
+#&gt;  8 virginica           6.4         3.2          5.3         2.3
+#&gt;  9 virginica           6.5         3            5.5         1.8
+#&gt; 10 virginica           6.1         3            4.9         1.8</code></pre>
 <p>A base R solution, with some marginal comments:</p>
 <pre class="r"><code>split_iris &lt;- split(iris, iris$Species) # why can&#39;t Species be found in iris?
                                         # where else would it be found?
