--- a/pt00_gotchas.html
+++ b/pt00_gotchas.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -87,6 +89,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -259,17 +264,19 @@ x %&gt;% {
          chr = map_chr(., &quot;chr&quot;))
 }
 #&gt; # A tibble: 2 x 2
-#&gt;      id   chr
+#&gt;      id chr  
 #&gt;   &lt;int&gt; &lt;chr&gt;
-#&gt; 1     1     a
-#&gt; 2     2     b
+#&gt; 1     1 a    
+#&gt; 2     2 b
 
 ## NO BAD DOES NOT WORK
 x %&gt;% {
   tibble(id = . %&gt;% map_int(&quot;int&quot;),
          chr = . %&gt;% map_chr(&quot;chr&quot;))
 }
-#&gt; Error: Columns `id`, `chr` must be 1d atomic vectors or lists</code></pre>
+#&gt; Error: All columns in a tibble must be a 1d vector or a list:
+#&gt; * Column `id` is fseq
+#&gt; * Column `chr` is fseq</code></pre>
 <p>What went wrong?</p>
 <p><code>. %&gt;% map_int(&quot;int&quot;)</code> built a unary function, instead of passing <code>x</code> into <code>map_int()</code>. Do not start a pipeline with <code>.</code> unless you want a unary function.</p>
 <p>What does this have to do with <code>purrr</code>?</p>
